--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -215,7 +215,6 @@
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.min.js" />
     <Content Include="Scripts\modernizr-2.8.3.js" />
-    <Content Include="uploadFiles\spider-man.jpg" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -234,6 +233,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Models\" />
+    <Folder Include="uploadFiles\" />
     <Folder Include="Views\FoodCategory\" />
   </ItemGroup>
   <ItemGroup>
