--- a/diabeasy-back/Data.csproj
+++ b/diabeasy-back/Data.csproj
@@ -118,6 +118,7 @@
     <Compile Include="tblUnitOfMeasure.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
+    <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
     <EntityDeploy Include="Model.edmx">
