--- a/WebApi/Web.config
+++ b/WebApi/Web.config
@@ -66,6 +66,7 @@
   </system.codedom>
   <connectionStrings>
     <add name="diabeasyDBContext" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=media.ruppin.ac.il;initial catalog=bgroup88_test2;persist security info=True;user id=bgroup88;password=bgroup88_06613;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+	 <add name="diabeasyDB" connectionString="Data Source=media.ruppin.ac.il;Initial Catalog=bgroup88_test2;Persist Security Info=True;User ID=bgroup88;Password=bgroup88_06613;MultipleActiveResultSets=True;Application Name=EntityFramework" />
   </connectionStrings>
   <entityFramework>
     <providers>
