--- a/diabeasy-back/NLog.config
+++ b/diabeasy-back/NLog.config
@@ -24,7 +24,7 @@
 		Call Site:${callsite}${newline}
 		Exception Type:${exception:format=Type}${newline}
 		Exception Massage:${exception:format=Message}${newline}
-		Stack Trace: ${exception:format-StackTrace}${newline}5זרררררררררררררר
+		Stack Trace: ${exception:format-StackTrace}${newline}
 		Additional Info: ${message}${newline}"/>
 
   </targets>
