--- a/diabeasy-back/App.Config
+++ b/diabeasy-back/App.Config
@@ -13,4 +13,11 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+	<system.net>
+		<mailSettings>
+			<smtp  from="diabeasyapp@gmail.com">
+				<network host="smtp.comcast.net" port="587"  userName="diabeasyapp" password="talgalidan" defaultCredentials="true" />
+			</smtp>
+		</mailSettings>
+	</system.net>
 </configuration>
