--- a/diabeasy-back/NLog.config
+++ b/diabeasy-back/NLog.config
@@ -16,18 +16,17 @@
   for information on customizing logging rules and outputs.
    -->
   <targets>
-		  <target name="fileTarget"
-		  xsi:type="File"
+	  <target name="fileTarget"
+	  xsi:type="File"	  
 		  fileName="http://proj.ruppin.ac.il//bgroup88/prod/example.log"
 		  layout="-------------${level}  (${longdate})---------------${newline}
-		${newline}
-		Call Site:${callsite}${newline}
-		Exception Type:${exception:format=Type}${newline}
-		Exception Massage:${exception:format=Message}${newline}
-		Stack Trace: ${exception:format-StackTrace}${newline}5זרררררררררררררר
-		Additional Info: ${message}${newline}"/>
-
-  </targets>
+		  ${newline}
+		  Call Site: ${callsite}${newline}
+		  Exception Type: ${exception:format=Type}${newline}
+		  Exception Massage: ${exception:format=Message}${newline}
+		  Stack Trace: ${exception:format-StackTrace}${newline}
+		  Additional Info: ${message}${newline}"/>
+	  </targets>
 
   <rules>
     <!-- add your logging rules here -->
