--- a/diabeasy-back/Data.csproj
+++ b/diabeasy-back/Data.csproj
@@ -75,6 +75,9 @@
       <DependentUpon>Model.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="sysdiagrams.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="tblATE_Ingredients.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
