--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="DTO\tblForumDto.cs" />
     <Compile Include="DTO\tblInsulinTypeDto.cs" />
+    <Compile Include="DTO\tblPrescriptionDto.cs" />
     <Compile Include="DTO\UserDto.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
