--- a/diabeasy-back/Data.csproj
+++ b/diabeasy-back/Data.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extention\Images.cs" />
     <Compile Include="Extention\tblForum.cs" />
     <Compile Include="Extention\User.cs" />
     <Compile Include="Model.Context.cs">
