--- a/WebApi/NLog.config
+++ b/WebApi/NLog.config
@@ -18,7 +18,7 @@
 	<targets>
 		<target name="fileTarget"
 		xsi:type="File"
-		fileName="http://proj.ruppin.ac.il//bgroup88/prod/example.log"
+		fileName="~example.log"
 		layout="-------------${level}  (${longdate})---------------${newline}
 		${newline}
 		Call Site:${callsite}${newline}
