--- a/WebApi/Web.config
+++ b/WebApi/Web.config
@@ -77,4 +77,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer"/>
     </providers>
   </entityFramework>
+	<system.net>
+		<defaultProxy enabled="false"></defaultProxy>
+	</system.net>
 </configuration>
