--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Controllers\UserController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
     <Compile Include="DTO\IngrediantDto.cs" />
+    <Compile Include="DTO\tblCategoryDto.cs" />
     <Compile Include="DTO\tblForumDto.cs" />
     <Compile Include="DTO\tblInsulinTypeDto.cs" />
     <Compile Include="DTO\tblPrescriptionDto.cs" />
