fix float bug in food

--- a/diabeasy-back/App.Config
+++ b/diabeasy-back/App.Config
@@ -5,8 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="diabeasyDBContext" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=media.ruppin.ac.il;initial catalog=bgroup88_test2;persist security info=True;user id=bgroup88;password=bgroup88_06613;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-  </connectionStrings>
+  <add name="diabeasyDBContext" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=media.ruppin.ac.il;initial catalog=bgroup88_test2;persist security info=True;user id=bgroup88;password=bgroup88_06613;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
@@ -15,8 +14,8 @@
   </entityFramework>
 	<system.net>
 		<mailSettings>
-			<smtp  from="diabeasyapp@gmail.com">
-				<network host="smtp.comcast.net" port="587"  userName="diabeasyapp" password="talgalidan" defaultCredentials="true" />
+			<smtp from="diabeasyapp@gmail.com">
+				<network host="smtp.comcast.net" port="587" userName="diabeasyapp" password="talgalidan" defaultCredentials="true" />
 			</smtp>
 		</mailSettings>
 	</system.net>
