--- a/WebApi/NLog.config
+++ b/WebApi/NLog.config
@@ -15,17 +15,30 @@
   See https://github.com/nlog/nlog/wiki/Configuration-file
   for information on customizing logging rules and outputs.
    -->
-	<targets>
-		<target name="fileTarget"
-		xsi:type="File"
-		fileName="~example.log"
-		layout="-------------${level}  (${longdate})---------------${newline}
+	<!-- <targets>
+	  <target name="fileTarget"
+	  xsi:type="File"	  
+			fileName="~example.log"
+		  layout="-------------${level}  (${longdate})---------------${newline}
 		${newline}
 		Call Site:${callsite}${newline}
-		Exception Type: ${exception:format=Type} ${newline}
-		Exception Massage: ${exception:format=Message} ${newline}
-		Stack Trace: ${exception:format-StackTrace} ${newline}
-		Additional Info: ${message} ${newline}"/>
+		Exception Type:${exception:format=Type}${newline}
+		Exception Massage:${exception:format=Message}${newline}
+		Stack Trace: ${exception:format-StackTrace}${newline}
+		Additional Info: ${message}${newline}"/>
+
+  </targets> -->
+	<targets>
+		<target name="FileLogger"
+				xsi:type="File"
+				layout="${longdate}|${pad:padding=-5:inner=${level:uppercase=true}}|${pad:padding=-26:inner=${replace:searchFor=BThere2.:replaceWith=:ignoreCase=true:inner=${logger}}}|${message} | ${exception:innerFormat=Message,Type,ShortType,ToString,Method,StackTrace:maxInnerExceptionLevel=2:format=Message,Type,ShortType,ToString,Method,StackTrace} | [${callsite:className=true:includeSourcePath=false:cleanNamesOfAnonymousDelegates=false}]"
+				fileName="~example.log"
+				archiveFileName="${basedir}/Logs/Archives/app.{##}.log"
+				archiveAboveSize="1000000"
+				maxArchiveFiles="100"
+				archiveNumbering="Rolling"
+				concurrentWrites="true"
+				keepFileOpen="false"/>
 	</targets>
 
   <rules>
