--- a/diabeasy-back/App.Config
+++ b/diabeasy-back/App.Config
@@ -4,8 +4,7 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <connectionStrings>
-  <add name="diabeasyDBContext" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=media.ruppin.ac.il;initial catalog=bgroup88_test2;persist security info=True;user id=bgroup88;password=bgroup88_06613;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
+
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
@@ -19,4 +18,4 @@
 			</smtp>
 		</mailSettings>
 	</system.net>
-</configuration>
+<connectionStrings><add name="diabeasyDBContext" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=media.ruppin.ac.il;initial catalog=bgroup88_test2;persist security info=True;user id=bgroup88;password=bgroup88_06613;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
