--- a/diabeasy-back/Data.csproj
+++ b/diabeasy-back/Data.csproj
@@ -60,6 +60,9 @@
     <Compile Include="Extention\Images.cs" />
     <Compile Include="Extention\tblForum.cs" />
     <Compile Include="Extention\User.cs" />
+    <Compile Include="Ingredients.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="Model.Context.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -76,6 +79,9 @@
       <DependentUpon>Model.edmx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Recipes.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
     <Compile Include="sysdiagrams.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
@@ -86,6 +92,9 @@
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="tblBelong.cs">
+      <DependentUpon>Model.tt</DependentUpon>
+    </Compile>
+    <Compile Include="tblBelongToRecipe.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="tblCategory.cs">
@@ -109,9 +118,6 @@
     <Compile Include="tblHistorylog.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
-    <Compile Include="tblIngredients.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
     <Compile Include="tblInsulinType.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
@@ -122,9 +128,6 @@
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="tblPrescriptions.cs">
-      <DependentUpon>Model.tt</DependentUpon>
-    </Compile>
-    <Compile Include="tblRecipes.cs">
       <DependentUpon>Model.tt</DependentUpon>
     </Compile>
     <Compile Include="tblUnitOfMeasure.cs">
