classes in extention - Hagbalot

--- a/diabeasy-back/Data.csproj
+++ b/diabeasy-back/Data.csproj
@@ -59,6 +59,7 @@
   <ItemGroup>
     <Compile Include="Extention\Images.cs" />
     <Compile Include="Extention\tblForum.cs" />
+    <Compile Include="Extention\tblPatients.cs" />
     <Compile Include="Extention\User.cs" />
     <Compile Include="Ingredients.cs">
       <DependentUpon>Model.tt</DependentUpon>
