--- a/diabeasy-back/App.Config
+++ b/diabeasy-back/App.Config
@@ -18,4 +18,4 @@
 			</smtp>
 		</mailSettings>
 	</system.net>
-<connectionStrings><add name="diabeasyDBContext" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=media.ruppin.ac.il;initial catalog=bgroup88_test2;persist security info=True;user id=bgroup88;password=bgroup88_06613;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings><add name="diabeasyDBContext" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=media.ruppin.ac.il;initial catalog=bgroup88_test2;user id=bgroup88;password=bgroup88_06613;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
