--- a/diabeasy-back/Data.csproj
+++ b/diabeasy-back/Data.csproj
@@ -57,6 +57,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extention\Food.cs" />
     <Compile Include="Extention\Images.cs" />
     <Compile Include="Extention\Ingredients.cs" />
     <Compile Include="Extention\Recipes.cs" />
