--- a/WebApi/WebApi.csproj
+++ b/WebApi/WebApi.csproj
@@ -183,6 +183,7 @@
     <Compile Include="DTO\IngrediantDto.cs" />
     <Compile Include="DTO\IngredientsForRecipeDto.cs" />
     <Compile Include="DTO\tblCategoryDto.cs" />
+    <Compile Include="DTO\tblFavoritesDto.cs" />
     <Compile Include="DTO\tblForumDto.cs" />
     <Compile Include="DTO\tblInsulinTypeDto.cs" />
     <Compile Include="DTO\tblPrescriptionDto.cs" />
