--- a/diabeasy-back/packages.config
+++ b/diabeasy-back/packages.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.7" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net472" />
   <package id="NLog" version="4.7.14" targetFramework="net472" />
   <package id="NLog.Config" version="4.7.14" targetFramework="net472" />
   <package id="NLog.Schema" version="4.7.14" targetFramework="net472" />
